--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
+		"@web3-react/abstract-connector": "^6.0.7",
 		"@web3-react/injected-connector": "^6.0.7",
 		"@web3-react/walletconnect-connector": "^6.2.13",
-		"@web3-react/walletlink-connector": "^6.2.14"
+		"@web3-react/walletlink-connector": "^6.2.14",
+		"web3": "^1.8.2"
 	}
 }
